--- a/mkosi/mkosi.extra/etc/systemd/journald.conf
+++ b/mkosi/mkosi.extra/etc/systemd/journald.conf
@@ -12,7 +12,7 @@
 # See journald.conf(5) for details.
 
 [Journal]
-Storage=auto
+#Storage=auto
 #Compress=yes
 #Seal=yes
 #SplitMode=uid
@@ -33,13 +33,13 @@ SyncIntervalSec=30
 #ForwardToSyslog=yes
 #ForwardToKMsg=no
 #ForwardToConsole=no
-ForwardToConsole=yes
+#ForwardToConsole=yes
 #ForwardToWall=yes
 #TTYPath=/dev/console
 #MaxLevelStore=debug
 #MaxLevelSyslog=debug
 #MaxLevelKMsg=notice
 #MaxLevelConsole=info
-MaxLevelConsole=debug
+#MaxLevelConsole=debug
 #MaxLevelWall=emerg
 #LineMax=48K
